--- a/references.bib
+++ b/references.bib
@@ -3,6 +3,12 @@
   file = {/Users/robintimmis/Zotero/storage/FUSG4AMP/6.07-_Fresnel_and_Fraunhofer_Approximations.pdf}
 }
 
+@online{45AOIBeamsplitter,
+  title = {45° {{AOI Beamsplitter Compensation Plates}}, {{UV Fused Silica}} for {{UV}} to {{NIR}}},
+  url = {https://www.thorlabs.com/newgrouppage9.cfm?objectgroup_id=10662},
+  organization = {Thor Labs}
+}
+
 @article{abu-shawarebLawsonCriterionIgnition2022,
   title = {Lawson {{Criterion}} for {{Ignition Exceeded}} in an {{Inertial Fusion Experiment}}},
   author = {Abu-Shawareb, H. and Acree, R. and Adams, P. and Adams, J. and Addis, B. and Aden, R. and Adrian, P. and Afeyan, B. B. and Aggleton, M. and Aghaian, L. and Aguirre, A. and Aikens, D. and Akre, J. and Albert, F. and Albrecht, M. and Albright, B. J. and Albritton, J. and Alcala, J. and Alday, C. and Alessi, D. A. and Alexander, N. and Alfonso, J. and Alfonso, N. and Alger, E. and Ali, S. J. and Ali, Z. A. and Alley, W. E. and Amala, P. and Amendt, P. A. and Amick, P. and Ammula, S. and Amorin, C. and Ampleford, D. J. and Anderson, R. W. and Anklam, T. and Antipa, N. and Appelbe, B. and Aracne-Ruddle, C. and Araya, E. and Arend, M. and Arnold, P. and Arnold, T. and Asay, J. and Atherton, L. J. and Atkinson, D. and Atkinson, R. and Auerbach, J. M. and Austin, B. and Auyang, L. and Awwal, A. S. and Ayers, J. and Ayers, S. and Ayers, T. and Azevedo, S. and Bachmann, B. and Back, C. A. and Bae, J. and Bailey, D. S. and Bailey, J. and Baisden, T. and Baker, K. L. and Baldis, H. and Barber, D. and Barberis, M. and Barker, D. and Barnes, A. and Barnes, C. W. and Barrios, M. A. and Barty, C. and Bass, I. and Batha, S. H. and Baxamusa, S. H. and Bazan, G. and Beagle, J. K. and Beale, R. and Beck, B. R. and Beck, J. B. and Bedzyk, M. and Beeler, R. G. and Beeler, R. G. and Behrendt, W. and Belk, L. and Bell, P. and Belyaev, M. and Benage, J. F. and Bennett, G. and Benedetti, L. R. and Benedict, L. X. and Berger, R. and Bernat, T. and Bernstein, L. A. and Berry, B. and Bertolini, L. and Besenbruch, G. and Betcher, J. and Bettenhausen, R. and Betti, R. and Bezzerides, B. and Bhandarkar, S. D. and Bickel, R. and Biener, J. and Biesiada, T. and Bigelow, K. and Bigelow-Granillo, J. and Bigman, V. and Bionta, R. M. and Birge, N. W. and Bitter, M. and Black, A. C. and Bleile, R. and Bleuel, D. L. and Bliss, E. and Bliss, E. and Blue, B. and Boehly, T. and Boehm, K. and Boley, C. D. and Bonanno, R. and Bond, E. J. and Bond, T. and Bonino, M. J. and Borden, M. and Bourgade, J.-L. and Bousquet, J. and Bowers, J. and Bowers, M. and Boyd, R. and Bozek, A. and Bradley, D. K. and Bradley, K. S. and Bradley, P. A. and Bradley, L. and Brannon, L. and Brantley, P. S. and Braun, D. and Braun, T. and Brienza-Larsen, K. and Briggs, T. M. and Britten, J. and Brooks, E. D. and Browning, D. and Bruhn, M. W. and Brunner, T. A. and Bruns, H. and Brunton, G. and Bryant, B. and Buczek, T. and Bude, J. and Buitano, L. and Burkhart, S. and Burmark, J. and Burnham, A. and Burr, R. and Busby, L. E. and Butlin, B. and Cabeltis, R. and Cable, M. and Cabot, W. H. and Cagadas, B. and Caggiano, J. and Cahayag, R. and Caldwell, S. E. and Calkins, S. and Callahan, D. A. and Calleja-Aguirre, J. and Camara, L. and Camp, D. and Campbell, E. M. and Campbell, J. H. and Carey, B. and Carey, R. and Carlisle, K. and Carlson, L. and Carman, L. and Carmichael, J. and Carpenter, A. and Carr, C. and Carrera, J. A. and Casavant, D. and Casey, A. and Casey, D. T. and Castillo, A. and Castillo, E. and Castor, J. I. and Castro, C. and Caughey, W. and Cavitt, R. and Celeste, J. and Celliers, P. M. and Cerjan, C. and Chandler, G. and Chang, B. and Chang, C. and Chang, J. and Chang, L. and Chapman, R. and Chapman, T. and Chase, L. and Chen, H. and Chen, H. and Chen, K. and Chen, L.-Y. and Cheng, B. and Chittenden, J. and Choate, C. and Chou, J. and Chrien, R. E. and Chrisp, M. and Christensen, K. and Christensen, M. and Christopherson, A. R. and Chung, M. and Church, J. A. and Clark, A. and Clark, D. S. and Clark, K. and Clark, R. and Claus, L. and Cline, B. and Cline, J. A. and Cobble, J. A. and Cochrane, K. and Cohen, B. and Cohen, S. and Collette, M. R. and Collins, G. and Collins, L. A. and Collins, T. J. B. and Conder, A. and Conrad, B. and Conyers, M. and Cook, A. W. and Cook, D. and Cook, R. and Cooley, J. C. and Cooper, G. and Cope, T. and Copeland, S. R. and Coppari, F. and Cortez, J. and Cox, J. and Crandall, D. H. and Crane, J. and Craxton, R. S. and Cray, M. and Crilly, A. and Crippen, J. W. and Cross, D. and Cuneo, M. and Cuotts, G. and Czajka, C. E. and Czechowicz, D. and Daly, T. and Danforth, P. and Darbee, R. and Darlington, B. and Datte, P. and Dauffy, L. and Davalos, G. and Davidovits, S. and Davis, P. and Davis, J. and Dawson, S. and Day, R. D. and Day, T. H. and Dayton, M. and Deck, C. and Decker, C. and Deeney, C. and DeFriend, K. A. and Deis, G. and Delamater, N. D. and Delettrez, J. A. and Demaret, R. and Demos, S. and Dempsey, S. M. and Desjardin, R. and Desjardins, T. and Desjarlais, M. P. and Dewald, E. L. and DeYoreo, J. and Diaz, S. and Dimonte, G. and Dittrich, T. R. and Divol, L. and Dixit, S. N. and Dixon, J. and Dodd, E. S. and Dolan, D. and Donovan, A. and Donovan, M. and Döppner, T. and Dorrer, C. and Dorsano, N. and Douglas, M. R. and Dow, D. and Downie, J. and Downing, E. and Dozieres, M. and Draggoo, V. and Drake, D. and Drake, R. P. and Drake, T. and Dreifuerst, G. and DuBois, D. F. and DuBois, P. F. and Dunham, G. and Dylla-Spears, R. and Dymoke-Bradshaw, A. K. L. and Dzenitis, B. and Ebbers, C. and Eckart, M. and Eddinger, S. and Eder, D. and Edgell, D. and Edwards, M. J. and Efthimion, P. and Eggert, J. H. and Ehrlich, B. and Ehrmann, P. and Elhadj, S. and Ellerbee, C. and Elliott, N. S. and Ellison, C. L. and Elsner, F. and Emerich, M. and Engelhorn, K. and England, T. and English, E. and Epperson, P. and Epstein, R. and Erbert, G. and Erickson, M. A. and Erskine, D. J. and Erlandson, A. and Espinosa, R. J. and Estes, C. and Estabrook, K. G. and Evans, S. and Fabyan, A. and Fair, J. and Fallejo, R. and Farmer, N. and Farmer, W. A. and Farrell, M. and Fatherley, V. E. and Fedorov, M. and Feigenbaum, E. and Feit, M. and Ferguson, W. and Fernandez, J. C. and Fernandez-Panella, A. and Fess, S. and Field, J. E. and Filip, C. V. and Fincke, J. R. and Finn, T. and Finnegan, S. M. and Finucane, R. G. and Fischer, M. and Fisher, A. and Fisher, J. and Fishler, B. and Fittinghoff, D. and Fitzsimmons, P. and Flegel, M. and Flippo, K. A. and Florio, J. and Folta, J. and Folta, P. and Foreman, L. R. and Forrest, C. and Forsman, A. and Fooks, J. and Foord, M. and Fortner, R. and Fournier, K. and Fratanduono, D. E. and Frazier, N. and Frazier, T. and Frederick, C. and Freeman, M. S. and Frenje, J. and Frey, D. and Frieders, G. and Friedrich, S. and Froula, D. H. and Fry, J. and Fuller, T. and Gaffney, J. and Gales, S. and Le Galloudec, B. and Le Galloudec, K. K. and Gambhir, A. and Gao, L. and Garbett, W. J. and Garcia, A. and Gates, C. and Gaut, E. and Gauthier, P. and Gavin, Z. and Gaylord, J. and Geissel, M. and Génin, F. and Georgeson, J. and Geppert-Kleinrath, H. and Geppert-Kleinrath, V. and Gharibyan, N. and Gibson, J. and Gibson, C. and Giraldez, E. and Glebov, V. and Glendinning, S. G. and Glenn, S. and Glenzer, S. H. and Goade, S. and Gobby, P. L. and Goldman, S. R. and Golick, B. and Gomez, M. and Goncharov, V. and Goodin, D. and Grabowski, P. and Grafil, E. and Graham, P. and Grandy, J. and Grasz, E. and Graziani, F. and Greenman, G. and Greenough, J. A. and Greenwood, A. and Gregori, G. and Green, T. and Griego, J. R. and Grim, G. P. and Grondalski, J. and Gross, S. and Guckian, J. and Guler, N. and Gunney, B. and Guss, G. and Haan, S. and Hackbarth, J. and Hackel, L. and Hackel, R. and Haefner, C. and Hagmann, C. and Hahn, K. D. and Hahn, S. and Haid, B. J. and Haines, B. M. and Hall, B. M. and Hall, C. and Hall, G. N. and Hamamoto, M. and Hamel, S. and Hamilton, C. E. and Hammel, B. A. and Hammer, J. H. and Hampton, G. and Hamza, A. and Handler, A. and Hansen, S. and Hanson, D. and Haque, R. and Harding, D. and Harding, E. and Hares, J. D. and Harris, D. B. and Harte, J. A. and Hartouni, E. P. and Hatarik, R. and Hatchett, S. and Hauer, A. A. and Havre, M. and Hawley, R. and Hayes, J. and Hayes, J. and Hayes, S. and Hayes-Sterbenz, A. and Haynam, C. A. and Haynes, D. A. and Headley, D. and Heal, A. and Heebner, J. E. and Heerey, S. and Heestand, G. M. and Heeter, R. and Hein, N. and Heinbockel, C. and Hendricks, C. and Henesian, M. and Heninger, J. and Henrikson, J. and Henry, E. A. and Herbold, E. B. and Hermann, M. R. and Hermes, G. and Hernandez, J. E. and Hernandez, V. J. and Herrmann, M. C. and Herrmann, H. W. and Herrera, O. D. and Hewett, D. and Hibbard, R. and Hicks, D. G. and Hill, D. and Hill, K. and Hilsabeck, T. and Hinkel, D. E. and Ho, D. D. and Ho, V. K. and Hoffer, J. K. and Hoffman, N. M. and Hohenberger, M. and Hohensee, M. and Hoke, W. and Holdener, D. and Holdener, F. and Holder, J. P. and Holko, B. and Holunga, D. and Holzrichter, J. F. and Honig, J. and Hoover, D. and Hopkins, D. and Berzak Hopkins, L. and Hoppe, M. and Hoppe, M. L. and Horner, J. and Hornung, R. and Horsfield, C. J. and Horvath, J. and Hotaling, D. and House, R. and Howell, L. and Hsing, W. W. and Hu, S. X. and Huang, H. and Huckins, J. and Hui, H. and Humbird, K. D. and Hund, J. and Hunt, J. and Hurricane, O. A. and Hutton, M. and Huynh, K. H.-K. and Inandan, L. and Iglesias, C. and Igumenshchev, I. V. and Izumi, N. and Jackson, M. and Jackson, J. and Jacobs, S. D. and James, G. and Jancaitis, K. and Jarboe, J. and Jarrott, L. C. and Jasion, D. and Jaquez, J. and Jeet, J. and Jenei, A. E. and Jensen, J. and Jimenez, J. and Jimenez, R. and Jobe, D. and Johal, Z. and Johns, H. M. and Johnson, D. and Johnson, M. A. and Gatu Johnson, M. and Johnson, R. J. and Johnson, S. and Johnson, S. A. and Johnson, T. and Jones, K. and Jones, O. and Jones, M. and Jorge, R. and Jorgenson, H. J. and Julian, M. and Jun, B. I. and Jungquist, R. and Kaae, J. and Kabadi, N. and Kaczala, D. and Kalantar, D. and Kangas, K. and Karasiev, V. V. and Karasik, M. and Karpenko, V. and Kasarky, A. and Kasper, K. and Kauffman, R. and Kaufman, M. I. and Keane, C. and Keaty, L. and Kegelmeyer, L. and Keiter, P. A. and Kellett, P. A. and Kellogg, J. and Kelly, J. H. and Kemic, S. and Kemp, A. J. and Kemp, G. E. and Kerbel, G. D. and Kershaw, D. and Kerr, S. M. and Kessler, T. J. and Key, M. H. and Khan, S. F. and Khater, H. and Kiikka, C. and Kilkenny, J. and Kim, Y. and Kim, Y.-J. and Kimko, J. and Kimmel, M. and Kindel, J. M. and King, J. and Kirkwood, R. K. and Klaus, L. and Klem, D. and Kline, J. L. and Klingmann, J. and Kluth, G. and Knapp, P. and Knauer, J. and Knipping, J. and Knudson, M. and Kobs, D. and Koch, J. and Kohut, T. and Kong, C. and Koning, J. M. and Koning, P. and Konior, S. and Kornblum, H. and Kot, L. B. and Kozioziemski, B. and Kozlowski, M. and Kozlowski, P. M. and Krammen, J. and Krasheninnikova, N. S. and Kraus, B. and Krauser, W. and Kress, J. D. and Kritcher, A. L. and Krieger, E. and Kroll, J. J. and Kruer, W. L. and Kruse, M. K. G. and Kucheyev, S. and Kumbera, M. and Kumpan, S. and Kunimune, J. and Kustowski, B. and Kwan, T. J. T. and Kyrala, G. A. and Laffite, S. and Lafon, M. and LaFortune, K. and Lahmann, B. and Lairson, B. and Landen, O. L. and Langenbrunner, J. and Lagin, L. and Land, T. and Lane, M. and Laney, D. and Langdon, A. B. and Langer, S. H. and Langro, A. and Lanier, N. E. and Lanier, T. E. and Larson, D. and Lasinski, B. F. and Lassle, D. and LaTray, D. and Lau, G. and Lau, N. and Laumann, C. and Laurence, A. and Laurence, T. A. and Lawson, J. and Le, H. P. and Leach, R. R. and Leal, L. and Leatherland, A. and LeChien, K. and Lechleiter, B. and Lee, A. and Lee, M. and Lee, T. and Leeper, R. J. and Lefebvre, E. and Leidinger, J.-P. and LeMire, B. and Lemke, R. W. and Lemos, N. C. and Le Pape, S. and Lerche, R. and Lerner, S. and Letts, S. and Levedahl, K. and Lewis, T. and Li, C. K. and Li, H. and Li, J. and Liao, W. and Liao, Z. M. and Liedahl, D. and Liebman, J. and Lindford, G. and Lindman, E. L. and Lindl, J. D. and Loey, H. and London, R. A. and Long, F. and Loomis, E. N. and Lopez, F. E. and Lopez, H. and Losbanos, E. and Loucks, S. and Lowe-Webb, R. and Lundgren, E. and Ludwigsen, A. P. and Luo, R. and Lusk, J. and Lyons, R. and Ma, T. and Macallop, Y. and MacDonald, M. J. and MacGowan, B. J. and Mack, J. M. and Mackinnon, A. J. and MacLaren, S. A. and MacPhee, A. G. and Magelssen, G. R. and Magoon, J. and Malone, R. M. and Malsbury, T. and Managan, R. and Mancini, R. and Manes, K. and Maney, D. and Manha, D. and Mannion, O. M. and Manuel, A. M. and Mapoles, E. and Mara, G. and Marcotte, T. and Marin, E. and Marinak, M. M. and Mariscal, C. and Mariscal, D. A. and Mariscal, E. F. and Marley, E. V. and Marozas, J. A. and Marquez, R. and Marshall, C. D. and Marshall, F. J. and Marshall, M. and Marshall, S. and Marticorena, J. and Martinez, D. and Maslennikov, I. and Mason, D. and Mason, R. J. and Masse, L. and Massey, W. and Masson-Laborde, P.-E. and Masters, N. D. and Mathisen, D. and Mathison, E. and Matone, J. and Matthews, M. J. and Mattoon, C. and Mattsson, T. R. and Matzen, K. and Mauche, C. W. and Mauldin, M. and McAbee, T. and McBurney, M. and Mccarville, T. and McCrory, R. L. and McEvoy, A. M. and McGuffey, C. and Mcinnis, M. and McKenty, P. and McKinley, M. S. and McLeod, J. B. and McPherson, A. and Mcquillan, B. and Meamber, M. and Meaney, K. D. and Meezan, N. B. and Meissner, R. and Mehlhorn, T. A. and Mehta, N. C. and Menapace, J. and Merrill, F. E. and Merritt, B. T. and Merritt, E. C. and Meyerhofer, D. D. and Mezyk, S. and Mich, R. J. and Michel, P. A. and Milam, D. and Miller, C. and Miller, D. and Miller, D. S. and Miller, E. and Miller, E. K. and Miller, J. and Miller, M. and Miller, P. E. and Miller, T. and Miller, W. and Miller-Kamm, V. and Millot, M. and Milovich, J. L. and Minner, P. and Miquel, J.-L. and Mitchell, S. and Molvig, K. and Montesanti, R. C. and Montgomery, D. S. and Monticelli, M. and Montoya, A. and Moody, J. D. and Moore, A. S. and Moore, E. and Moran, M. and Moreno, J. C. and Moreno, K. and Morgan, B. E. and Morrow, T. and Morton, J. W. and Moses, E. and Moy, K. and Muir, R. and Murillo, M. S. and Murray, J. E. and Murray, J. R. and Munro, D. H. and Murphy, T. J. and Munteanu, F. M. and Nafziger, J. and Nagayama, T. and Nagel, S. R. and Nast, R. and Negres, R. A. and Nelson, A. and Nelson, D. and Nelson, J. and Nelson, S. and Nemethy, S. and Neumayer, P. and Newman, K. and Newton, M. and Nguyen, H. and Di Nicola, J.-M. G. and Di Nicola, P. and Niemann, C. and Nikroo, A. and Nilson, P. M. and Nobile, A. and Noorai, V. and Nora, R. and Norton, M. and Nostrand, M. and Note, V. and Novell, S. and Nowak, P. F. and Nunez, A. and Nyholm, R. A. and O’Brien, M. and Oceguera, A. and Oertel, J. A. and Okui, J. and Olejniczak, B. and Oliveira, J. and Olsen, P. and Olson, B. and Olson, K. and Olson, R. E. and Opachich, Y. P. and Orsi, N. and Orth, C. D. and Owen, M. and Padalino, S. and Padilla, E. and Paguio, R. and Paguio, S. and Paisner, J. and Pajoom, S. and Pak, A. and Palaniyappan, S. and Palma, K. and Pannell, T. and Papp, F. and Paras, D. and Parham, T. and Park, H.-S. and Pasternak, A. and Patankar, S. and Patel, M. V. and Patel, P. K. and Patterson, R. and Patterson, S. and Paul, B. and Paul, M. and Pauli, E. and Pearce, O. T. and Pearcy, J. and Pedrotti, B. and Peer, A. and Pelz, L. J. and Penetrante, B. and Penner, J. and Perez, A. and Perkins, L. J. and Pernice, E. and Perry, T. S. and Person, S. and Petersen, D. and Petersen, T. and Peterson, D. L. and Peterson, E. B. and Peterson, J. E. and Peterson, J. L. and Peterson, K. and Peterson, R. R. and Petrasso, R. D. and Philippe, F. and Phipps, T. J. and Piceno, E. and Ping, Y. and Pickworth, L. and Pino, J. and Plummer, R. and Pollack, G. D. and Pollaine, S. M. and Pollock, B. B. and Ponce, D. and Ponce, J. and Pontelandolfo, J. and Porter, J. L. and Post, J. and Poujade, O. and Powell, C. and Powell, H. and Power, G. and Pozulp, M. and Prantil, M. and Prasad, M. and Pratuch, S. and Price, S. and Primdahl, K. and Prisbrey, S. and Procassini, R. and Pruyne, A. and Pudliner, B. and Qiu, S. R. and Quan, K. and Quinn, M. and Quintenz, J. and Radha, P. B. and Rainer, F. and Ralph, J. E. and Raman, K. S. and Raman, R. and Rambo, P. and Rana, S. and Randewich, A. and Rardin, D. and Ratledge, M. and Ravelo, N. and Ravizza, F. and Rayce, M. and Raymond, A. and Raymond, B. and Reed, B. and Reed, C. and Regan, S. and Reichelt, B. and Reis, V. and Reisdorf, S. and Rekow, V. and Remington, B. A. and Rendon, A. and Requieron, W. and Rever, M. and Reynolds, H. and Reynolds, J. and Rhodes, J. and Rhodes, M. and Richardson, M. C. and Rice, B. and Rice, N. G. and Rieben, R. and Rigatti, A. and Riggs, S. and Rinderknecht, H. G. and Ring, K. and Riordan, B. and Riquier, R. and Rivers, C. and Roberts, D. and Roberts, V. and Robertson, G. and Robey, H. F. and Robles, J. and Rocha, P. and Rochau, G. and Rodriguez, J. and Rodriguez, S. and Rosen, M. and Rosenberg, M. and Ross, G. and Ross, J. S. and Ross, P. and Rouse, J. and Rovang, D. and Rubenchik, A. M. and Rubery, M. S. and Ruiz, C. L. and Rushford, M. and Russ, B. and Rygg, J. R. and Ryujin, B. S. and Sacks, R. A. and Sacks, R. F. and Saito, K. and Salmon, T. and Salmonson, J. D. and Sanchez, J. and Samuelson, S. and Sanchez, M. and Sangster, C. and Saroyan, A. and Sater, J. and Satsangi, A. and Sauers, S. and Saunders, R. and Sauppe, J. P. and Sawicki, R. and Sayre, D. and Scanlan, M. and Schaffers, K. and Schappert, G. T. and Schiaffino, S. and Schlossberg, D. J. and Schmidt, D. W. and Schmitt, M. J. and Schneider, D. H. G. and Schneider, M. B. and Schneider, R. and Schoff, M. and Schollmeier, M. and Schölmerich, M. and Schroeder, C. R. and Schrauth, S. E. and Scott, H. A. and Scott, I. and Scott, J. M. and Scott, R. H. H. and Scullard, C. R. and Sedillo, T. and Seguin, F. H. and Seka, W. and Senecal, J. and Sepke, S. M. and Seppala, L. and Sequoia, K. and Severyn, J. and Sevier, J. M. and Sewell, N. and Seznec, S. and Shah, R. C. and Shamlian, J. and Shaughnessy, D. and Shaw, M. and Shaw, R. and Shearer, C. and Shelton, R. and Shen, N. and Sherlock, M. W. and Shestakov, A. I. and Shi, E. L. and Shin, S. J. and Shingleton, N. and Shmayda, W. and Shor, M. and Shoup, M. and Shuldberg, C. and Siegel, L. and Silva, F. J. and Simakov, A. N. and Sims, B. T. and Sinars, D. and Singh, P. and Sio, H. and Skulina, K. and Skupsky, S. and Slutz, S. and Sluyter, M. and Smalyuk, V. A. and Smauley, D. and Smeltser, R. M. and Smith, C. and Smith, I. and Smith, J. and Smith, L. and Smith, R. and Sohn, R. and Sommer, S. and Sorce, C. and Sorem, M. and Soures, J. M. and Spaeth, M. L. and Spears, B. K. and Speas, S. and Speck, D. and Speck, R. and Spears, J. and Spinka, T. and Springer, P. T. and Stadermann, M. and Stahl, B. and Stahoviak, J. and Stanton, L. G. and Steele, R. and Steele, W. and Steinman, D. and Stemke, R. and Stephens, R. and Sterbenz, S. and Sterne, P. and Stevens, D. and Stevers, J. and Still, C. B. and Stoeckl, C. and Stoeffl, W. and Stolken, J. S. and Stolz, C. and Storm, E. and Stone, G. and Stoupin, S. and Stout, E. and Stowers, I. and Strauser, R. and Streckart, H. and Streit, J. and Strozzi, D. J. and Suratwala, T. and Sutcliffe, G. and Suter, L. J. and Sutton, S. B. and Svidzinski, V. and Swadling, G. and Sweet, W. and Szoke, A. and Tabak, M. and Takagi, M. and Tambazidis, A. and Tang, V. and Taranowski, M. and Taylor, L. A. and Telford, S. and Theobald, W. and Thi, M. and Thomas, A. and Thomas, C. A. and Thomas, I. and Thomas, R. and Thompson, I. J. and Thongstisubskul, A. and Thorsness, C. B. and Tietbohl, G. and Tipton, R. E. and Tobin, M. and Tomlin, N. and Tommasini, R. and Toreja, A. J. and Torres, J. and Town, R. P. J. and Townsend, S. and Trenholme, J. and Trivelpiece, A. and Trosseille, C. and Truax, H. and Trummer, D. and Trummer, S. and Truong, T. and Tubbs, D. and Tubman, E. R. and Tunnell, T. and Turnbull, D. and Turner, R. E. and Ulitsky, M. and Upadhye, R. and Vaher, J. L. and VanArsdall, P. and VanBlarcom, D. and Vandenboomgaerde, M. and VanQuinlan, R. and Van Wonterghem, B. M. and Varnum, W. S. and Velikovich, A. L. and Vella, A. and Verdon, C. P. and Vermillion, B. and Vernon, S. and Vesey, R. and Vickers, J. and Vignes, R. M. and Visosky, M. and Vocke, J. and Volegov, P. L. and Vonhof, S. and Von Rotz, R. and Vu, H. X. and Vu, M. and Wall, D. and Wall, J. and Wallace, R. and Wallin, B. and Walmer, D. and Walsh, C. A. and Walters, C. F. and Waltz, C. and Wan, A. and Wang, A. and Wang, Y. and Wark, J. S. and Warner, B. E. and Watson, J. and Watt, R. G. and Watts, P. and Weaver, J. and Weaver, R. P. and Weaver, S. and Weber, C. R. and Weber, P. and Weber, S. V. and Wegner, P. and Welday, B. and Welser-Sherrill, L. and Weiss, K. and Widmann, K. and Wheeler, G. F. and Whistler, W. and White, R. K. and Whitley, H. D. and Whitman, P. and Wickett, M. E. and Widmayer, C. and Wiedwald, J. and Wilcox, R. and Wilcox, S. and Wild, C. and Wilde, B. H. and Wilde, C. H. and Wilhelmsen, K. and Wilke, M. D. and Wilkens, H. and Wilkins, P. and Wilks, S. C. and Williams, E. A. and Williams, G. J. and Williams, W. and Williams, W. H. and Wilson, D. C. and Wilson, B. and Wilson, E. and Wilson, R. and Winters, S. and Wisoff, J. and Wittman, M. and Wolfe, J. and Wong, A. and Wong, K. W. and Wong, L. and Wong, N. and Wood, R. and Woodhouse, D. and Woodruff, J. and Woods, D. T. and Woods, S. and Woodworth, B. N. and Wooten, E. and Wootton, A. and Work, K. and Workman, J. B. and Wright, J. and Wu, M. and Wuest, C. and Wysocki, F. J. and Xu, H. and Yamaguchi, M. and Yang, B. and Yang, S. T. and Yatabe, J. and Yeamans, C. B. and Yee, B. C. and Yi, S. A. and Yin, L. and Young, B. and Young, C. S. and Young, C. V. and Young, P. and Youngblood, K. and Zacharias, R. and Zagaris, G. and Zaitseva, N. and Zaka, F. and Ze, F. and Zeiger, B. and Zika, M. and Zimmerman, G. B. and Zobrist, T. and Zuegel, J. D. and Zylstra, A. B. and {Indirect Drive ICF Collaboration}},
@@ -63,6 +69,19 @@
   file = {/Users/robintimmis/Zotero/storage/AQ7F2C66/Albert et al. - 2013 - Angular Dependence of Betatron X-Ray Spectra from .pdf}
 }
 
+@article{anderbruggePropagationRelativisticSurface2007,
+  title = {Propagation of Relativistic Surface Harmonics Radiation in Free Space},
+  author = {An Der Brügge, Daniel and Pukhov, Alexander},
+  date = {2007-09-01},
+  journaltitle = {Physics of Plasmas},
+  volume = {14},
+  number = {9},
+  pages = {093104},
+  issn = {1070-664X, 1089-7674},
+  doi = {10.1063/1.2771519},
+  langid = {english}
+}
+
 @article{andreevDoubleRelativisticElectron2013,
   title = {Double {{Relativistic Electron Accelerating Mirror}}},
   author = {Andreev, Alexander and Platonov, Konstantin and Sadykova, Saltanat},
@@ -103,6 +122,13 @@
   issn = {0146-9592, 1539-4794},
   doi = {10.1364/OL.36.002755},
   langid = {english}
+}
+
+@online{AnsysZemaxOpticStudio,
+  title = {Ansys {{Zemax OpticStudio}}},
+  url = {https://www.ansys.com/products/optics/ansys-zemax-opticstudio},
+  urldate = {2024-04-05},
+  organization = {Ansys}
 }
 
 @article{aoyama085PW33fsTi2003,
@@ -154,6 +180,13 @@
   doi = {10.1063/1.4905523},
   langid = {english},
   file = {/Users/robintimmis/Zotero/storage/68V58ED9/efficient-semi-lagrangian-vlasov-maxwell-simulations-of-high-order-harmonic-generation-from-relativistic-laser-plasma-interactions.pdf;/Users/robintimmis/Zotero/storage/TB4R5F32/Arefiev et al. - 2015 - Temporal resolution criterion for correctly simula.pdf}
+}
+
+@letter{astburyTargetFabricationGroup2024,
+  type = {E-mail},
+  title = {Target {{Fabrication Group}}, {{Central Laser Facility}}, {{STFC Rutherford Appleton Laboratory}}, {{Didcot OX11 0QX}}, {{UK}}.},
+  author = {Astbury, Sam},
+  date = {2024}
 }
 
 @article{atongaGravitationalWavesHighpower2023,
@@ -726,6 +759,13 @@
   file = {/Users/robintimmis/Zotero/storage/H5Q49M2Z/Derouillat et al. - 2018 - Smilei  A collaborative, open-source, multi-purpo.pdf}
 }
 
+@letter{dhillierModelORIONContrast2022,
+  type = {E-mail},
+  title = {A Model of the {{ORION}} Contrast},
+  author = {{D Hillier} and Harvey, E and Treadwell, P},
+  year = {21.11.22}
+}
+
 @article{dollarEnhancedLaserAbsorption2017,
   title = {Enhanced Laser Absorption from Radiation Pressure in Intense Laser Plasma Interactions},
   author = {Dollar, F. and Zulick, C. and Raymond, A. and Chvykov, V. and Willingale, L. and Yanovsky, V. and Maksimchuk, A. and Thomas, A. G.R. and Krushelnick, K.},
@@ -861,6 +901,20 @@
   file = {/Users/robintimmis/Zotero/storage/CJJWPPIG/Dromey et al. - 2004 - The plasma mirror—A subpicosecond optical switch f.pdf}
 }
 
+@article{dromeyThirdHarmonicOrder2009,
+  title = {Third Harmonic Order Imaging as a Focal Spot Diagnostic for High Intensity Laser-Solid Interactions},
+  author = {Dromey, B. and Bellei, C. and Carroll, D.C. and Clarke, R.J. and Green, J.S. and Kar, S. and Kneip, S. and Markey, K. and Nagel, S.R. and Willingale, L. and McKenna, P. and Neely, D. and Najmudin, Z. and Krushelnick, K. and Norreys, P.A. and Zepf, M.},
+  date = {2009-06},
+  journaltitle = {Laser and Particle Beams},
+  shortjournal = {Laser Part. Beams},
+  volume = {27},
+  number = {2},
+  pages = {243--248},
+  issn = {0263-0346, 1469-803X},
+  doi = {10.1017/S0263034609000329},
+  langid = {english}
+}
+
 @article{durisTunableIsolatedAttosecond2020,
   title = {Tunable Isolated Attosecond {{X-ray}} Pulses with Gigawatt Peak Power from a Free-Electron Laser},
   author = {Duris, Joseph and Li, Siqi and Driver, Taran and Champenois, Elio G. and MacArthur, James P. and Lutman, Alberto A. and Zhang, Zhen and Rosenberger, Philipp and Aldrich, Jeff W. and Coffee, Ryan and Coslovich, Giacomo and Decker, Franz-Josef and Glownia, James M. and Hartmann, Gregor and Helml, Wolfram and Kamalov, Andrei and Knurr, Jonas and Krzywinski, Jacek and Lin, Ming-Fu and Marangos, Jon P. and Nantel, Megan and Natan, Adi and O’Neal, Jordan T. and Shivaram, Niranjan and Walter, Peter and Wang, Anna Li and Welch, James J. and Wolf, Thomas J. A. and Xu, Joseph Z. and Kling, Matthias F. and Bucksbaum, Philip H. and Zholents, Alexander and Huang, Zhirong and Cryan, James P. and Marinelli, Agostino},
@@ -877,6 +931,12 @@
   langid = {english},
   keywords = {Optics and photonics,Physics},
   file = {/Users/robintimmis/Zotero/storage/Y5CKQ3ED/Duris et al. - 2020 - Tunable isolated attosecond X-ray pulses with giga.pdf}
+}
+
+@online{EagleXVVacuum,
+  title = {Eagle {{XV}} – {{In Vacuum X-Ray}}},
+  url = {https://www.raptorphotonics.com/products/eagle-xv/},
+  organization = {Raptor Photonics}
 }
 
 @article{edwardsElectronNanobunchWidthDominatedSpectralPower2020,
@@ -2373,6 +2433,21 @@
   file = {/Users/robintimmis/Zotero/storage/DC3N5WET/Ong et al. - 2021 - Electron transport in a nanowire irradiated by an .pdf}
 }
 
+@article{ouatuIonizationStatesMultipetawatt2022,
+  title = {Ionization States for the Multipetawatt Laser-{{QED}} Regime},
+  author = {Ouatu, I. and Spiers, B. T. and Aboushelbaya, R. and Feng, Q. and Von Der Leyen, M. W. and Paddock, R. W. and Timmis, R. and Ticos, C. and Krushelnick, K. M. and Norreys, P. A.},
+  date = {2022-07-27},
+  journaltitle = {Physical Review E},
+  shortjournal = {Phys. Rev. E},
+  volume = {106},
+  number = {1},
+  pages = {015205},
+  issn = {2470-0045, 2470-0053},
+  doi = {10.1103/PhysRevE.106.015205},
+  langid = {english},
+  file = {/Users/robintimmis/Zotero/storage/G2FCJKLG/Ouatu et al. - 2022 - Ionization states for the multipetawatt laser-QED .pdf}
+}
+
 @article{paddockStudyFoamTargets,
   title = {A Study of Foam Targets for Direct-Drive Inertial Confinement Fusion},
   author = {Paddock, Robert W},
@@ -2428,6 +2503,21 @@
   issn = {1094-4087},
   doi = {10.1364/OE.19.007717},
   langid = {english}
+}
+
+@article{polyanskiyRefractiveindexInfoDatabase2024,
+  title = {Refractiveindex.Info Database of Optical Constants},
+  author = {Polyanskiy, Mikhail N.},
+  date = {2024-01-18},
+  journaltitle = {Scientific Data},
+  shortjournal = {Sci Data},
+  volume = {11},
+  number = {1},
+  pages = {94},
+  issn = {2052-4463},
+  doi = {10.1038/s41597-023-02898-2},
+  langid = {english},
+  file = {/Users/robintimmis/Zotero/storage/U2S4RDQS/Polyanskiy - 2024 - Refractiveindex.info database of optical constants.pdf}
 }
 
 @article{popmintchevUltravioletSurpriseEfficient2015,
@@ -3405,7 +3495,7 @@
   publisher = {American Physical Society},
   issn = {10797114},
   doi = {10.1103/PhysRevLett.123.105001},
-  file = {/Users/robintimmis/Zotero/storage/DDFEMUJT/PhysRevLett.123.105001.pdf}
+  file = {/Users/robintimmis/Zotero/storage/DDFEMUJT/PhysRevLett.123.105001.pdf;/Users/robintimmis/Zotero/storage/SGXKZQZJ/PhysRevE.106.015205.pdf}
 }
 
 @article{vincentiAttosecondLighthousesHow2012,
